{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 21,
  "lineage": "d90fd900-8b14-2532-9248-3ed961d60250",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01561b0b028f2d8de",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0e9c0f07d7ff5a7b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9c0f07d7ff5a7b1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a07c8e60d999bdd3",
            "private_dns": "ip-172-31-24-178.eu-west-1.compute.internal",
            "private_ip": "172.31.24.178",
            "public_dns": "ec2-34-253-181-194.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.181.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-086c21be99132cb08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ami_sec_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0429d69d55dfad9d2",
            "tags": {
              "Name": "Eng67.Humza.Terraform.Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f22bb6aaf5bb904"
            ]
          },
          "dependencies": [
            "aws_security_group.ami_sec_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0526bf4f5618f25d2",
            "id": "igw-0526bf4f5618f25d2",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Humza.Terraform.Internet.Gateway"
            },
            "vpc_id": "vpc-05440cb233b455d26"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ad69bdfd9f3bdda9",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0526bf4f5618f25d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng67.Humza.Terraform.Public.Route.Table"
            },
            "vpc_id": "vpc-05440cb233b455d26"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd236e86d5d01a25",
            "route_table_id": "rtb-0ad69bdfd9f3bdda9",
            "subnet_id": "subnet-011bd2f525fa4022d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ami_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-02f22bb6aaf5bb904",
            "description": "allow traffic in",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f22bb6aaf5bb904",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "86.4.83.36/32"
                ],
                "description": "allow inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ami_sec_group",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng67.Humza.Terraform.PublicSubnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e47e9d90d2076da"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-093ebbb4f58527a76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "200.160.10.0/24",
            "id": "subnet-093ebbb4f58527a76",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Humza.Terraform.PublicSubnet"
            },
            "vpc_id": "vpc-05440cb233b455d26"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-011bd2f525fa4022d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "200.160.5.0/24",
            "id": "subnet-011bd2f525fa4022d",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Humza.Terraform.PublicSubnet"
            },
            "vpc_id": "vpc-05440cb233b455d26"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-05440cb233b455d26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "200.160.0.0/16",
            "default_network_acl_id": "acl-0319489a09d453ff3",
            "default_route_table_id": "rtb-08c84d81a72d059f1",
            "default_security_group_id": "sg-067fd2ee0973c8f26",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05440cb233b455d26",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c84d81a72d059f1",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Humza.Terraform.VPC"
            }
          }
        }
      ]
    }
  ]
}